refactor(dto): normalizar paquetes y corregir proyeccion de asistencia